--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="nav-item"><a href="/">Home</a></li>
-                <li class="nav-item"><a href="/">Genres</a></li>
+                <li class="nav-item"><a href="/genres">Genres</a></li>
             </ul>
         </div>
     </div>
