--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@
                 {% endif %}
             {% endfor %}
             </div>
+            <br><BR>
 
-
-            <h1>What your friends are reading</h1>
+            <h1>friends are reading</h1>
             <div class="row">
             {% for book in books %}
                 {% if(book['friendRead'] == True) %}
