--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,19 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="nav-item"><a href="/">Home</a></li>
-                <li class="nav-item"><a href="/genres">Genres</a></li>
+                 <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                      Genres <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <a class="dropdown-item" href="{{url_for('genre', genre= 'Romance')}}">Romance</a><br>
+                            <a class="dropdown-item" href="{{url_for('genre', genre= 'Fantasy')}}">Fantasy</a><br>
+                            <a class="dropdown-item" href="{{url_for('genre', genre= 'Thriller')}}">Thriller</a>
+                      </ul>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Publishers/Authors</a></li>
             </ul>
         </div>
     </div>
