--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,4 @@
+
 /*
  * General
  */
@@ -12,6 +13,20 @@ html, body, h1 {
 body {
   background-color: #f4f4f4;
   font-family: 'Open Sans', sans-serif;
+}
+h1{
+   font-size: 1.5em;
+    border-bottom: 1px solid darkgray;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+
+}
+h2{
+    font-size: 1.3em;
+    border-bottom: 1px solid darkgray;
+}
+.row a{
+    color: var(--accent);
 }
 .navbar{
     background-color: black;
@@ -41,7 +56,7 @@ body {
 
 .btn-accent{
     background-color: var(--accent);
-    color: white;
+    color: white!important;
 }
 
 .btn-accent:hover{
@@ -75,4 +90,3 @@ body {
 .book-detail img{
     width: 100%;
 }
-
