--- a/templates/book.html
+++ b/templates/book.html
@@ -3,7 +3,6 @@
 {% block title %}Greatreads - {{book['title']}} {% endblock %}
 
 
-
 {% block content %}
 <div class="container">
     <div class="row">
@@ -13,13 +12,12 @@
 
         </div>
         <div class="col-md-7 col-sm-6">
-            <h2>{{book['title']}}</h2>
+            <h2><strong>{{book['title']}}</strong></h2>
             <p>by {{book['author']}}</p>
             <p>{{book['description']}}</p>
             <p><strong>Genre:</strong>
-                {% for gen in book['genre'] %}
-                    {{gen}},
-                {%endfor %}
+                {{ book['genre'] }}
+
             </p>
         </div>
 
